Fixed the alignments of input and select box on data analysis page and min max input box questionnaire page: Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -81,3 +81,11 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
     vertical-align: middle;
 }
 
+#data_analysis_length select{
+        vertical-align:middle;
+}
+
+#data_analysis_filter input{
+        vertical-align:middle;
+}
+
