--- a/media/css/scss/section_questionnaire.scss
+++ b/media/css/scss/section_questionnaire.scss
@@ -8,6 +8,9 @@
         }
     }
 }
+#range_min{
+    margin-left:4px !important;
+}
 #range_max, #range_min{
     width:60px;
     float:none;
